manifests/base/email/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice
  namespace: emailservice
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: checkoutservice
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - {}
